# graphics-programming-2025

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile
exercises/: Additional C++.html  CMakeLists.txt  exercise_00.html  exercise_01.html  exercise_02.html  exercise_03.html  exercise_04.html  exercise_05.html  exercise_06.html  exercise_07.html  exercise_09.html  exercise_10.html  style.css
exercises/exercise00/: main.cpp
exercises/exercise08/shaders/: default_pbr.frag
libraries/itugl/src/ituGL/renderer/: ForwardRenderPass.cpp  Renderer.cpp
